--- a/i3/config
+++ b/i3/config
@@ -30,6 +30,9 @@ floating_modifier $mod
 # the above is default, but does not currently work. Will have to get a more i3-sensible terminal
 bindsym $mod+Return exec gnome-terminal
 
+# start web browser
+bindsym $mod+w exec firefox
+
 # kill focused window
 bindsym $mod+q kill
 
